--- a/.github/workflows/main_mongodbatlasazurenodejs.yml
+++ b/.github/workflows/main_mongodbatlasazurenodejs.yml
@@ -54,7 +54,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'mongodbatlasazurenodejs'
+          app-name: 'test-nicolas'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_AE2B7A3BBD3E4F48ADFF18DBEEAF6C76 }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_1DC787FD843C435FB517B78C419D1703 }}
           package: .
