--- a/.github/workflows/main_mongodbatlasazurenodejs.yml
+++ b/.github/workflows/main_mongodbatlasazurenodejs.yml
@@ -30,12 +30,14 @@ jobs:
           npm install
           npm run build
           cp -r ./build ../server/public
-            
+      - run: |
+          cd mern/server
+          zip -r ../mern-app.zip *
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: mern-app
-          path: mern/server
+          path: mern-app.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -49,7 +51,9 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: mern-app
-  
+      - run: |
+          unzip mern-app.zip
+          rm mern-app.zip
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
